--- a/electron-menubar/dashboard.html
+++ b/electron-menubar/dashboard.html
@@ -3086,6 +3086,29 @@
       // Save settings
       document.getElementById('saveSettingsBtn').addEventListener('click', saveSettings);
 
+      // Helper: Extrahiert den lesbaren Tastennamen aus e.code (macOS gibt sonst Sonderzeichen zurück bei Alt+Taste)
+      function getKeyNameFromCode(code) {
+        if (code.startsWith('Key')) return code.slice(3); // "KeyX" -> "X"
+        if (code.startsWith('Digit')) return code.slice(5); // "Digit1" -> "1"
+        if (code.startsWith('Numpad')) return 'Num' + code.slice(6); // "Numpad1" -> "Num1"
+        const specialKeys = {
+          'Space': 'Space', 'Backspace': 'Backspace', 'Tab': 'Tab', 'Enter': 'Enter',
+          'Escape': 'Escape', 'Delete': 'Delete', 'Home': 'Home', 'End': 'End',
+          'PageUp': 'PageUp', 'PageDown': 'PageDown', 'ArrowUp': 'Up', 'ArrowDown': 'Down',
+          'ArrowLeft': 'Left', 'ArrowRight': 'Right', 'Insert': 'Insert',
+          'F1': 'F1', 'F2': 'F2', 'F3': 'F3', 'F4': 'F4', 'F5': 'F5', 'F6': 'F6',
+          'F7': 'F7', 'F8': 'F8', 'F9': 'F9', 'F10': 'F10', 'F11': 'F11', 'F12': 'F12',
+          'Minus': '-', 'Equal': '=', 'BracketLeft': '[', 'BracketRight': ']',
+          'Semicolon': ';', 'Quote': "'", 'Backquote': '`', 'Backslash': '\\',
+          'Comma': ',', 'Period': '.', 'Slash': '/'
+        };
+        return specialKeys[code] || code;
+      }
+      
+      function isModifierCode(code) {
+        return ['ControlLeft', 'ControlRight', 'AltLeft', 'AltRight', 'ShiftLeft', 'ShiftRight', 'MetaLeft', 'MetaRight'].includes(code);
+      }
+
       // Shortcut capture
       const shortcutInput = document.getElementById('shortcutInput');
       shortcutInput.addEventListener('click', () => {
@@ -3100,10 +3123,10 @@
         if (e.altKey) parts.push('Alt');
         if (e.shiftKey) parts.push('Shift');
         if (e.metaKey) parts.push('Command');
-        if (!['Control', 'Alt', 'Shift', 'Meta'].includes(e.key)) {
-          parts.push(e.key.toUpperCase());
+        if (!isModifierCode(e.code)) {
+          parts.push(getKeyNameFromCode(e.code).toUpperCase());
         }
-        if (parts.length >= 2 && !['Control', 'Alt', 'Shift', 'Meta'].includes(e.key)) {
+        if (parts.length >= 2 && !isModifierCode(e.code)) {
           shortcutInput.value = parts.join('+');
           shortcutInput.style.borderColor = '';
           shortcutInput.blur();
@@ -3283,10 +3306,10 @@
         if (e.altKey) parts.push('Alt');
         if (e.shiftKey) parts.push('Shift');
         if (e.metaKey) parts.push('Cmd');
-        if (!['Control', 'Alt', 'Shift', 'Meta'].includes(e.key)) {
-          parts.push(e.key.toUpperCase());
+        if (!isModifierCode(e.code)) {
+          parts.push(getKeyNameFromCode(e.code).toUpperCase());
         }
-        if (parts.length >= 2 && !['Control', 'Alt', 'Shift', 'Meta'].includes(e.key)) {
+        if (parts.length >= 2 && !isModifierCode(e.code)) {
           // Format für Electron: Command statt Cmd, etc.
           const electronParts = parts.map(p => {
             if (p === 'Cmd') return 'Command';
@@ -3338,10 +3361,10 @@
         if (e.altKey) parts.push('Alt');
         if (e.shiftKey) parts.push('Shift');
         if (e.metaKey) parts.push('Cmd');
-        if (!['Control', 'Alt', 'Shift', 'Meta'].includes(e.key)) {
-          parts.push(e.key.toUpperCase());
+        if (!isModifierCode(e.code)) {
+          parts.push(getKeyNameFromCode(e.code).toUpperCase());
         }
-        if (parts.length >= 2 && !['Control', 'Alt', 'Shift', 'Meta'].includes(e.key)) {
+        if (parts.length >= 2 && !isModifierCode(e.code)) {
           const electronParts = parts.map(p => {
             if (p === 'Cmd') return 'Command';
             if (p === 'Ctrl') return 'Control';
